Update: index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-    <head>hi</head>
+    <head>
+        <title>hantangblog</title>
+    </head>
     <body>
         <h1>Hello World!</h1>
     </body>
